# bacon-ai-evolutionary-mesh

./: .gitignore  BACON_IMPLEMENTATION_PLAN.md  BACON_SESSION_RESUME.md  CLAUDE.md  CLAUDE_CODE_TEST_PROMPT.md  GEMINI.md  README.md  SESSION_RESUME_20260107_0844.md  debug_memory.py  record_self_annealing.py
.agent/workflows/: deploy.md  github-pr.md
.claude/: settings.local.json
documentation/deployment/: mesh_join_prompt.md  (+3 more)
src/control_plane/: __init__.py  __main__.py  bacon-control.service  bacon-env@.service  bacon-feature-physics.service  bacon-integration.service  database.py  deploy_hostinger.py  distribute_infrastructure.py  main.py  memory_gateway.py  migrate.py  models.py  mqtt_handler.py  pyproject.toml  requirements.txt  server.py  simulate_heartbeat.py  test_hierarchy.py  test_mqtt.py
src/control_plane/agents/: mqtt-listener.md
src/control_plane/static/: index.html
src/control_plane/static/assets/: index-B5sPEqrW.js  index-BUMFlgT-.js  index-BejPsxY3.js  index-Bx-GAEFc.js  index-C174BjbT.js  index-C8OImGYC.js  index-CLXYoSZL.js  index-CN5_gKNQ.js  index-CV1YcQOs.css  index-CWFoksxJ.js  index-CokNKez7.js  index-Cqr7yux1.js  index-CzdxAMEL.js  index-DeqtSz5u.js  index-Dtb6pClw.js  index-Dz_ilvYN.js  index-IQ_3YAuB.js  index-IZYPH9lK.js  index-Nk3yph7O.js  index-uTnO9vBs.js
src/control_plane/wake-test/: CLAUDE_CODE_INSTRUCTIONS.md  h2a_wake_test.py
src/control_plane/wake-test/bacon_mqtt_mcp/: IMPLEMENTATION.md  README.md  __main__.py  e2e_test.py  install.sh  requirements.txt  server.py
src/control_plane/wake-test/bacon_mqtt_mcp/config/: settings.example.json
src/stay_awake_mcp/: README.md  pyproject.toml  requirements.txt  server.py
(+28 files in other folders)
