[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bacon-mqtt-mcp"
version = "1.0.0"
description = "Cross-machine Claude wake system using MQTT and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Colin", email = "colin@bacon-ai.local" }
]
keywords = ["mcp", "mqtt", "claude", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiomqtt>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bacon-mqtt-mcp = "bacon_mqtt_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["bacon_mqtt_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
